# cuda_uchi

./: CMakeLists.txt  CMakePresets.json
smoke_test/: cuda_smoketest.cu  simp_dev_query.cu  simtest.cu  smcount.cu  smcount.py
src/: CMakeLists.txt
src/simd_ex_mod/: 3deuclid.cu  3deuclid_1.cu  CMakeLists.txt  euclid_report.rpt.ncu-rep  euclid_report2.rpt.ncu-rep  isprime.cu  isprime_appl_org_comp.cu  silly_vector_add.cu  vector_add.cu
src/smoke_test/: CMakeLists.txt  cuda_smoketest.cu  simp_dev_query.cu  smcount_pynvml.py
